--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qw35-syntax",
+  "name": "จ่ายหวย เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ✔️ ❤️ ♕",
   "theme": "syntax",
   "version": "0.2.0",
   "description": "จ่ายหวย✔️ ❤️ ♕ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ตลอด 24 ชั่วโมง",
